<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/space8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_16"
            android:gravity="center_vertical"
            android:text="@string/items" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/space8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_16"
            android:gravity="center_vertical"
            android:text="@string/task_type" />
        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space8"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_16"
            android:gravity="center_vertical"
            android:text="@string/preidct_develop_time" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/space10">
            <EditText
                android:id="@+id/ed_date_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/edit_border"
                android:layout_marginRight="@dimen/space4"
                android:gravity="center"
                android:hint="@string/start_time"
                android:textSize="@dimen/font_16"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@drawable/edit_border"
                android:text="至"/>
            <EditText
                android:id="@+id/ed_date_end"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/space4"
                android:background="@drawable/edit_border"
                android:gravity="center"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="@dimen/font_16"
                android:hint="@string/task_time"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space8"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_16"
            android:paddingTop="@dimen/space8"
            android:text="@string/task_desc" />

        <EditText
            android:id="@+id/et_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space4"
            android:layout_marginTop="@dimen/space4"
            android:background="@drawable/edit_border"
            android:gravity="left|top"
            android:hint="请输入任务明细"
            android:focusable="true"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="5"
            android:scrollbars="vertical"
            android:text=""
            android:textSize="@dimen/font_16" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/space8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_16"
            android:paddingTop="@dimen/space8"
            android:text="@string/task_predict_hour" />

        <EditText
            android:id="@+id/et_hours"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/space4"
            android:layout_marginTop="@dimen/space4"
            android:focusable="true"
            android:background="@drawable/edit_border"
            android:hint="请输入预计工时(小时)"
            android:textSize="@dimen/font_16" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/space8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/space8"
            android:textSize="@dimen/font_16"
            android:text="@string/designate"
            android:textColor="@color/color_333333" />
        <Spinner
            android:id="@+id/spinner_person"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space40"
        android:layout_margin="@dimen/space8">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/font_16"
            android:layout_marginRight="@dimen/space4"
            android:textColor="@color/color_333333"
            android:text="@string/cancel"
            android:background="@drawable/selector_dialog_btn_cannel"/>
        <TextView
            android:id="@+id/tv_ensure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/space4"
            android:gravity="center"
            android:textSize="@dimen/font_16"
            android:textColor="@color/color_ffffff"
            android:text="@string/ensure"
            android:background="@drawable/selector_dialog_btn_ensure"/>
    </LinearLayout>
</LinearLayout>