<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space8"
        android:layout_marginLeft="@dimen/space8"
        android:layout_marginRight="@dimen/space8"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:stateListAnimator="@drawable/selector_elevation"
        app:cardBackgroundColor="@color/color_ffffff"
        app:cardCornerRadius="@dimen/space10"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_5"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items"
                    android:textColor="@color/color_9b9b9b"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_task_affiliation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="TextView"
                    android:textSize="@dimen/font_16" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_5"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_5">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task"
                    android:textColor="@color/color_9b9b9b"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="@dimen/font_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_5"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_predict_hour"
                    android:textColor="@color/color_9b9b9b"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_task_hours"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="@dimen/font_16" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space30"
                    android:text="@string/task_practical_time"
                    android:textColor="@color/color_9b9b9b"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_task_practical_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="@dimen/font_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_5"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_progress"
                    android:textColor="@color/color_9b9b9b"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_task_progress"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="@dimen/font_16" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_status"
                    android:textColor="@color/color_9b9b9b"
                    android:layout_marginLeft="@dimen/space30"
                    android:textSize="@dimen/font_16" />
                <TextView
                    android:id="@+id/tv_task_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="@dimen/font_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_5"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_5">

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textColor="@color/color_9b9b9b"
                android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_task_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_time"
                    android:layout_marginLeft="@dimen/space10"
                    android:textColor="@color/color_9b9b9b"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_task_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="@dimen/font_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_5"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="@string/task_person"
                    android:textColor="@color/color_9b9b9b"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_task_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="@dimen/font_16" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>